--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@walletconnect/utils": "^1.8.0",
     "axios": "^0.27.2",
+    "bignumber.js": "^9.1.0",
     "caver-js": "^1.6.8",
     "classnames": "^2.3.1",
     "dotenv": "^8.0.0",
