--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "homepage": "https://klaytn.github.io/klaytn-online-toolkit",
   "dependencies": {
     "@klaytn/kaikas-web3-provider": "^1.0.2",
-    "@klaytn/web3modal": "^1.0.1",
+    "@klaytn/klip-web3-provider": "^1.0.2",
+    "@klaytn/web3modal": "^1.1.0",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
