--- a/package.json
+++ b/package.json
@@ -1,70 +1,54 @@
 {
   "name": "klaytn-online-toolkit",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "private": true,
-  "homepage": "https://klaytn.github.io/klaytn-online-toolkit",
   "dependencies": {
     "@klaytn/kaikas-web3-provider": "^1.0.2",
     "@klaytn/klip-web3-provider": "^1.0.2",
     "@klaytn/web3modal": "^1.1.0",
-    "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/react": "^12.1.3",
-    "@testing-library/user-event": "^13.5.0",
     "@walletconnect/utils": "^1.8.0",
     "axios": "^0.27.2",
     "bignumber.js": "^9.1.0",
     "caver-js": "^1.6.8",
-    "classnames": "^2.3.1",
-    "dotenv": "^8.0.0",
-    "dotenv-webpack": "^1.7.0",
-    "ethereumjs-util": "^7.1.5",
-    "gh-pages": "^4.0.0",
-    "lodash": "^4.17.15",
-    "mini-css-extract-plugin": "^0.9.0",
-    "optimize-css-assets-webpack-plugin": "^5.0.3",
-    "prop-types": "^15.8.1",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-router-dom": "^5.2.0",
+    "lodash": "^4.17.21",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.1",
     "react-scripts": "^4.0.3",
-    "reactstrap": "^9.1.1",
-    "serve": "^14.0.1",
-    "web3": "^1.7.5",
-    "webpack-merge": "^5.8.0"
+    "reactstrap": "^9.1.4",
+    "styled-components": "^5.3.5",
+    "typescript": "^4.8.3",
+    "web-vitals": "^2.1.4",
+    "web3": "^1.8.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.5.5",
-    "@babel/plugin-proposal-class-properties": "^7.5.5",
-    "@babel/polyfill": "^7.4.4",
-    "@babel/preset-env": "^7.5.5",
-    "@babel/preset-react": "^7.0.0",
-    "@babel/register": "^7.5.5",
-    "babel-eslint": "^10.0.2",
-    "babel-loader": "^8.0.6",
-    "clean-webpack-plugin": "^1.0.0",
-    "compression-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^5.0.3",
-    "css-loader": "^3.1.0",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
-    "html-webpack-plugin": "^3.2.0",
-    "opn": "^6.0.0",
-    "react-hot-loader": "^4.12.9",
-    "redux-devtools-extension": "^2.13.8",
-    "sass-loader": "^7.1.0",
-    "style-loader": "^0.23.1",
-    "uglifyjs-webpack-plugin": "^2.1.3",
-    "webpack": "^4.37.0",
-    "webpack-cli": "^3.3.6",
-    "webpack-dev-middleware": "^3.7.0",
-    "webpack-dev-server": "^3.7.2",
-    "webpack-hot-middleware": "^2.25.0"
+    "@types/jest": "^27.5.2",
+    "@types/lodash": "^4.14.185",
+    "@types/node": "^16.11.59",
+    "@types/react": "^18.0.20",
+    "@types/react-dom": "^18.0.6",
+    "@types/styled-components": "^5.1.26"
   },
   "scripts": {
-    "build": "webpack --config ./webpack.prod.js",
-    "start": "serve -s ./build -p 5555",
-    "local": "webpack-dev-server --config webpack.dev.js",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "lint": "eslint --fix src/**/*.{jsx,ts,tsx}",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app"
+    ],
+    "rules": {
+      "@typescript-eslint/explicit-function-return-type": "off",
+      "@typescript-eslint/no-unused-vars": "off",
+      "import/no-anonymous-default-export": "off",
+      "react-hooks/exhaustive-deps": "off"
+    }
+  },
+  "prettier": {
+    "singleQuote": true,
+    "semi": false
   },
   "browserslist": {
     "production": [
