Setting for github-page

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "klaytn-online-toolkit",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://klaytn.github.io/klaytn-online-toolkit",
   "dependencies": {
     "@klaytn/kaikas-web3-provider": "^1.0.2",
     "@klaytn/klip-web3-provider": "^1.0.2",
@@ -27,11 +28,14 @@
     "@types/node": "^16.11.59",
     "@types/react": "^18.0.20",
     "@types/react-dom": "^18.0.6",
-    "@types/styled-components": "^5.1.26"
+    "@types/styled-components": "^5.1.26",
+    "gh-pages": "^4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "lint": "eslint --fix src/**/*.{jsx,ts,tsx}",
     "eject": "react-scripts eject"
   },
