--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "caver-js": "^1.6.8",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.1",
     "react-scripts": "^4.0.3",
@@ -27,6 +28,7 @@
     "@types/lodash": "^4.14.185",
     "@types/node": "^16.11.59",
     "@types/react": "^18.0.20",
+    "@types/react-copy-to-clipboard": "^5.0.4",
     "@types/react-dom": "^18.0.6",
     "@types/styled-components": "^5.1.26",
     "gh-pages": "^4.0.0"
