--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.1",
     "react-scripts": "^4.0.3",
+    "react-toastify": "^8.2.0",
     "reactstrap": "^9.1.4",
     "styled-components": "^5.3.5",
     "typescript": "^4.8.3",
