--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "caver-js": "^1.6.8",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
+    "react-code-blocks": "^0.0.9-0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.1",
