--- a/package.json
+++ b/package.json
@@ -7,15 +7,17 @@
     "@klaytn/kaikas-web3-provider": "^1.0.2",
     "@klaytn/klip-web3-provider": "^1.0.2",
     "@klaytn/web3modal": "^1.1.0",
+    "@tabler/icons": "^1.107.0",
     "@walletconnect/utils": "^1.8.0",
     "axios": "^0.27.2",
     "bignumber.js": "^9.1.0",
     "caver-js": "^1.6.8",
     "lodash": "^4.17.21",
+    "prism-react-renderer": "^1.3.5",
     "react": "^17.0.2",
-    "react-code-blocks": "^0.0.9-0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^17.0.2",
+    "react-query": "^3.39.2",
     "react-router-dom": "^5.2.1",
     "react-scripts": "^4.0.3",
     "react-toastify": "^8.2.0",
