--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "homepage": "https://klaytn.github.io/klaytn-online-toolkit",
   "dependencies": {
-    "@klaytn/kaikas-web3-provider": "^1.0.2",
+    "@klaytn/kaikas-web3-provider": "^1.0.3",
     "@klaytn/klip-web3-provider": "^1.0.2",
     "@klaytn/web3modal": "^1.1.0",
     "@tabler/icons": "^1.107.0",
@@ -12,6 +12,7 @@
     "axios": "^0.27.2",
     "bignumber.js": "^9.1.0",
     "caver-js": "^1.6.8",
+    "ethereumjs-util": "^7.1.5",
     "lodash": "^4.17.21",
     "prism-react-renderer": "^1.3.5",
     "react": "^17.0.2",
@@ -28,6 +29,7 @@
     "web3": "^1.8.0"
   },
   "devDependencies": {
+    "@types/ethereumjs-util": "^6.1.0",
     "@types/jest": "^27.5.2",
     "@types/lodash": "^4.14.185",
     "@types/node": "^16.11.59",
