--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "prism-react-renderer": "^1.3.5",
     "react": "^17.0.2",
     "react-copy-to-clipboard": "^5.1.0",
+    "react-device-detect": "^2.2.2",
     "react-dom": "^17.0.2",
     "react-query": "^3.39.2",
     "react-router-dom": "^6.4.2",
