Add setting for Window

--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
     "lint": "eslint --fix src/**/*.{jsx,ts,tsx}",
     "eject": "react-scripts eject",
     "electron:start": "concurrently -k \"cross-env BROWSER=none npm run start\" \"wait-on http://localhost:3000 && electronmon .\"",
-    "electron:package:mac": "npm run build && electron-builder -m -c.extraMetadata.main=build/electron.js"
+    "electron:package:mac": "npm run build && electron-builder -m -c.extraMetadata.main=build/electron.js",
+    "electron:package:win": "npm run build && electron-builder -w -c.extraMetadata.main=build/electron.js"
   },
   "build": {
     "appId": "com.electron.myapp",
@@ -68,6 +69,9 @@
     },
     "mac": {
       "target": "dmg"
+    },
+    "win": {
+      "target": "nsis"
     }
   },
   "eslintConfig": {
