--- a/package.json
+++ b/package.json
@@ -52,8 +52,8 @@
       "react-app"
     ],
     "rules": {
-      "@typescript-eslint/explicit-function-return-type": "error",
-      "@typescript-eslint/no-unused-vars": "error",
+      "@typescript-eslint/explicit-function-return-type": "off",
+      "@typescript-eslint/no-unused-vars": "off",
       "import/no-anonymous-default-export": "off",
       "react-hooks/exhaustive-deps": "off"
     }
